--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="./style.css">
+    <link href="./style.css" rel="stylesheet">
     <title>My First Webpage</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
         </ul>
       </div>
       <div class="child2">
-        <p>Here's a photo of me, my dad and my son at a Corinthians game:</p>
+        <p>Here's a photo of me, my dad and my son at a Corinthians game back in '16:</p>
         <img class="photo" src="https://scontent.fcgh3-1.fna.fbcdn.net/v/t1.18169-9/13267744_1256377424392148_2109284534661967332_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGBchx1XhKRXIVyCsCbyT29TQTKYO1dW3dNBMpg7V1bdycY2VgqKxdh8bVeFCQqdXoK3UD3ushKBKmzktHYCcuD&_nc_ohc=xHvz6EQH9pEAX-drZX_&_nc_ht=scontent.fcgh3-1.fna&oh=00_AfCOrwDBoLsSWb91-VWUWc65ZCaRSQcmcQ5pbo-EWIBYdQ&oe=63BE8315" alt="My dad, my son and I supporting Corinthians">
       </div>
       
